--- a/src/app.css
+++ b/src/app.css
@@ -2,3 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.center-everywhere {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
