Uses tailwind apply instead of css.

--- a/src/app.css
+++ b/src/app.css
@@ -4,7 +4,5 @@
 @tailwind utilities;
 
 .center-everywhere {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  @apply flex items-center justify-center;
 }
